tests/fixtures/invalid/chr_no_args.py
# chr() requires at least 1 argument
x = chr()
